src/style.css
/* ... */
/* DESKTOP */

@media (--lg) {
  h2 {
    font-size: 3.5rem;
  }

  /* HOME */

  .videoPlayerInfo {
    & header {
      margin-bottom: 3rem;
    }

    & h2 {
      font-size: 4rem;
    }

    & p {
      margin-top: 3rem;
    }
  }

  .filterAndHeader {
    position: relative;
    display: flex;
    justify-content: flex-end;
    max-width: 110rem;
    margin: 5rem auto 4rem;
    padding: 0 2rem;

    & header {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      margin: 0;
    }

    & .zoekFilterHolder {
      margin: 0;
    }
  }

  .cardHolderBtns,
  .sorter {
    max-width: 110rem;
  }

  .sorter {
    max-width: 106rem;
    margin-left: auto;
    margin-right: auto;
  }

  .cardHolder {
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 4rem;
    padding: 0 3rem;
    margin-left: auto;
    margin-right: auto;
  }
  /* LOGIN */

  .loginHolder .colorBg {
    justify-content: center;

    & .registerHolder {
      margin-left: 12rem;
    }
  }

  /* PROJECT DETAIL */

  .projectDetailInfo {
    margin: 5rem auto 15rem;
    max-width: 110rem;
  }

  .prototypeArticleHolder {
    max-width: 110rem;
    padding-left: 1rem;
    padding-right: 1rem;
    margin-left: auto;
    margin-right: auto;
    grid-template-columns: repeat(3, 1fr);
  }
}

.hide {
  display: none;
}

.strong {
  font-weight: var(--weight-bold);
}

